--- a/AutomatGetIT/src/main/resources/com/automatgetit/hello-view.fxml
+++ b/AutomatGetIT/src/main/resources/com/automatgetit/hello-view.fxml
@@ -86,27 +86,27 @@
                   </AnchorPane>
                   <HBox layoutX="10.0" layoutY="327.0" prefHeight="51.0" prefWidth="165.0">
                      <children>
-                        <Button fx:id="Btn50Cent" mnemonicParsing="false" prefHeight="52.0" prefWidth="0.0" style="-fx-background-color: transparent;">
+                        <Button fx:id="Btn50Cent" mnemonicParsing="false" style="-fx-background-color: transparent;">
                            <graphic>
-                              <ImageView fitHeight="41.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="36.0" fitWidth="112.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../images/50cent.jpg" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="Btn1Euro" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: transparent;">
+                        <Button fx:id="Btn1Euro" mnemonicParsing="false" style="-fx-background-color: transparent;">
                            <graphic>
-                              <ImageView fitHeight="47.0" fitWidth="112.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="47.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../images/1Euro.jpg" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="Btn2Euro" mnemonicParsing="false" prefHeight="54.0" prefWidth="44.0" style="-fx-background-color: transparent;">
+                        <Button fx:id="Btn2Euro" mnemonicParsing="false" style="-fx-background-color: transparent;">
                            <graphic>
-                              <ImageView fitHeight="49.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="36.0" fitWidth="112.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../images/2Euro.jpg" />
                                  </image>
